--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@use 'variables' as var;
+
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap');
 
 *{
@@ -7,11 +9,8 @@
 }
 
 
-
-
-
-
 body{
+  background-color: $Desaturateddarkblue;
   font-family: 'League Spartan', sans-serif;
   .calc{
 
