--- a/sass/main.css
+++ b/sass/main.css
@@ -44,6 +44,10 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns input[type=radio] {
   opacity: 0;
+  cursor: pointer;
+}
+body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns input {
+  cursor: pointer;
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns .labels {
   position: relative;
@@ -53,8 +57,9 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns .toggleBtn {
   all: unset;
   background-color: black;
-  height: 15px;
-  width: 15px;
+  height: 17px;
+  width: 17px;
   border-radius: 50%;
   position: absolute;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
