--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 
 
 body{
-  background-color: $Desaturateddarkblue;
+  background-color: var.$Desaturateddarkblue;
   font-family: 'League Spartan', sans-serif;
   .calc{
 
@@ -50,8 +50,11 @@ body{
 
           input[type=radio]{
             opacity: 0;
+            cursor: pointer;
           }
-
+          input{
+            cursor: pointer;
+          }
           .labels{
             position: relative;
             transform: translate(-10px,-25px);
@@ -65,6 +68,7 @@ body{
             width:17px;
             border-radius: 50%;
             position: absolute;
+            cursor: pointer;
           }
         }
       }
