--- a/sass/main.css
+++ b/sass/main.css
@@ -33,25 +33,27 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
   all: unset;
   display: flex;
   align-items: center;
-  align-items: baseline;
   flex-direction: row;
   background-color: blue;
   border-radius: 30px;
   position: relative;
   height: 15px;
   width: 55px;
-  padding: 0.3rem;
+  padding: 0.2rem;
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns input[type=radio] {
   opacity: 0;
   cursor: pointer;
+  height: 17px;
+  width: 17px;
+  -webkit-tap-highlight-color: transparent;
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns input {
   cursor: pointer;
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns .labels {
   position: relative;
-  transform: translate(-10px, -25px);
+  transform: translate(-10px, -23px);
   font-size: 0.9rem;
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns .toggleBtn {
@@ -62,4 +64,5 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
   border-radius: 50%;
   position: absolute;
   cursor: pointer;
+  transition: all 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }/*# sourceMappingURL=main.css.map */
