--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,71 +13,82 @@ body{
   background-color: var.$Desaturateddarkblue;
   font-family: 'League Spartan', sans-serif;
   .calc{
+    padding:1.5rem 0;
 
    .calc__container{
-    padding: 1.5rem;
+      padding: 1.5rem;
 
-    .calc__container-header{
-      display: flex;
-      justify-content: space-between;
-
-      .calc__container-logo{
-        font-size: 2rem;
-      }
-      .calc__header-themeContainer{
+      .calc__container-header{
         display: flex;
         justify-content: space-between;
-        align-items: center;
-        width: 150px;
-        // background-color: red;
 
-        .calc__theme{
-          font-size:.9rem;
-          text-transform: uppercase;
+        .calc__container-logo{
+          font-size: 2rem;
         }
-        .calc__header-btns{
-          all: unset;
+        .calc__header-themeContainer{
           display: flex;
+          justify-content: space-between;
           align-items: center;
-          // align-items: baseline;
-          flex-direction: row;
-          background-color: blue;
-          border-radius:30px;
-          position: relative;
-          height: 15px;
-          width: 55px;
-          padding: .2rem;
+          width: 125px;
+          // background-color: red;
 
-          input[type=radio]{
-            opacity: 0;
-            cursor: pointer;
-            height: 17px;
-            width: 17px;
-            -webkit-tap-highlight-color: transparent;
+          .calc__theme{
+            font-size:.7rem;
+            text-transform: uppercase;
           }
-          input{
-            cursor: pointer;
-          }
-          .labels{
+          .calc__header-btns{
+            all: unset;
+            display: flex;
+            align-items: center;
+            // align-items: baseline;
+            flex-direction: row;
+            background-color: blue;
+            border-radius:30px;
             position: relative;
-            transform: translate(-10px,-23px);
-            font-size: .9rem;
-          }
+            height: 15px;
+            width: 55px;
+            padding: .2rem;
 
-          .toggleBtn{
-            all:unset;
-            background-color: black;
-            height:17px;
-            width:17px;
-            border-radius: 50%;
-            position: absolute;
-            cursor: pointer;
-            transition:all 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-            // display: none;
+            input[type=radio]{
+              opacity: 0;
+              cursor: pointer;
+              height: 17px;
+              width: 17px;
+              -webkit-tap-highlight-color: transparent;
+            }
+            input{
+              cursor: pointer;
+            }
+            .labels{
+              position: relative;
+              transform: translate(-10px,-23px);
+              font-size: .9rem;
+            }
+
+            .toggleBtn{
+              all:unset;
+              background-color: black;
+              height:17px;
+              width:17px;
+              border-radius: 50%;
+              position: absolute;
+              cursor: pointer;
+              transition:all 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+              // display: none;
+            }
           }
         }
       }
-    }
+      .calc__display{
+        width: 100%;
+        height: 90px;
+        border-radius: 15px;
+        background-color: blueviolet;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        text-align:end;
+      }
    }
   }
 }
