--- a/sass/main.scss
+++ b/sass/main.scss
@@ -81,13 +81,16 @@ body{
       }
       .calc__display{
         width: 100%;
-        height: 90px;
-        border-radius: 15px;
-        background-color: blueviolet;
-        display: flex;
-        justify-content: end;
-        align-items: center;
-        text-align:end;
+        // height: 90px;
+        // display: flex;
+        // justify-content: end;
+        // align-items: center;
+        // text-align:end;
+        // #calc__input{
+        // width: 100%;
+        // height: 90px;
+        // border-radius: 15px;
+        // }
       }
    }
   }
