--- a/sass/main.scss
+++ b/sass/main.scss
@@ -95,8 +95,8 @@ body{
         // }
       }
       .calc__numberContainer{
-        // display: flex;
-        padding: 1.5rem;
+        padding: 1.6rem 1.3rem;
+        border-radius: 10px;
 
         background-color: cyan;
         
@@ -107,7 +107,7 @@ body{
           .keyStyle{
             all: unset;
             background-color: yellow;
-            width:60px;
+            width:63px;
             height: 70px;
             text-align: center;
             border-radius: 5px;
@@ -115,9 +115,23 @@ body{
             box-shadow: 0 4px 0 0.2px #b4a597;
           }
           .delBtn{
-            font-size: 1.5rem ;
+            font-size: 1.3rem ;
           }
           
+        }
+        .row-5{
+          display: flex;
+          justify-content: space-between;
+          .resetBtn,.equalesBtn{
+            all: unset;
+            width: 137px;
+            text-align: center;
+            height: 70px;
+            background-color: yellow;
+            border-radius: 5px;
+            font-size: 1.5rem;
+            box-shadow: 0 4px 0 0.2px #b4a597;
+          }
         }
       }
    }
