--- a/sass/main.css
+++ b/sass/main.css
@@ -89,8 +89,8 @@ body .calc .calc__container .calc__numberContainer .rows {
 body .calc .calc__container .calc__numberContainer .rows .keyStyle {
   all: unset;
   background-color: yellow;
-  width: 63px;
-  height: 70px;
+  width: min(94px, 22%);
+  height: 68px;
   text-align: center;
   border-radius: 5px;
   font-size: 2.1rem;
