--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,21 +4,21 @@
 // #### Backgrounds
 
 // (main background)
-$Verydarkdesaturatedblue: hsl(222, 26%, 31%);
+$Verydarkdesaturatedblue1: hsl(222, 26%, 31%);
 
 // (toggle background, keypad background)
-$Verydarkdesaturatedblue: hsl(223, 31%, 20%);
+$Verydarkdesaturatedblue2: hsl(223, 31%, 20%);
 
 // (screen background)
-$Verydarkdesaturatedblue: hsl(224, 36%, 15%);
+$Verydarkdesaturatedblue3: hsl(224, 36%, 15%);
 
 // #### Keys
 
 // (key background)
-$Desaturateddarkblue : hsl(225, 21%, 49%);
+$Desaturateddarkblue1 : hsl(225, 21%, 49%);
 
 // (key shadow)
-$Desaturateddarkblue : hsl(224, 28%, 35%);
+$Desaturateddarkblue2 : hsl(224, 28%, 35%);
 
 // (key background, toggle)
 $Red : hsl(6, 63%, 50%);
@@ -36,7 +36,7 @@ $Grayishorange : hsl(28, 16%, 65%);
 $Verydarkgrayishblue: hsl(221, 14%, 31%);
 $White: hsl(0, 0%, 100%);
 
-// ### Theme
+// ### Theme 2
 // #### Backgrounds
 
 // (main background)
@@ -79,10 +79,10 @@ $White : hsl(0, 0%, 100%);
 // #### Backgrounds
 
 // (main background)
-$Verydarkviolet : hsl(268, 75%, 9%);
+$Verydarkviolet1 : hsl(268, 75%, 9%);
 
 // (toggle background, keypad background, screen background)
-$Verydarkviolet : hsl(268, 71%, 12%);
+$Verydarkviolet2 : hsl(268, 71%, 12%);
 
 // #### Keys
 // (key background)
