--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -29,7 +29,7 @@ $Darkred : hsl(6, 70%, 34%);
 // (key background)
 $Lightgrayishorange : hsl(30, 25%, 89%);
 
-// (key shadow
+// (key shadow)
 $Grayishorange : hsl(28, 16%, 65%);
 
 // #### Text
