--- a/sass/main.css
+++ b/sass/main.css
@@ -5,6 +5,22 @@
   box-sizing: border-box;
 }
 
+.theme1 .calc {
+  background-color: hsl(225deg, 21%, 49%);
+}
+.theme1 .calc__container-logo, .theme1 .labels, .theme1 .calc__theme {
+  color: hsl(0deg, 0%, 100%);
+}
+.theme1 .calc__header-btns {
+  background-color: hsl(223deg, 31%, 20%) !important;
+}
+.theme1 .toggleBtn {
+  background-color: hsl(6deg, 63%, 50%) !important;
+}
+.theme1 .calc__display {
+  background-color: hsl(224deg, 36%, 15%);
+}
+
 body {
   font-family: "League Spartan", sans-serif;
 }
@@ -41,7 +57,6 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
   display: flex;
   align-items: center;
   flex-direction: row;
-  background-color: blue;
   border-radius: 30px;
   position: relative;
   height: 15px;
@@ -65,7 +80,6 @@ body .calc .calc__container .calc__container-header .calc__header-themeContainer
 }
 body .calc .calc__container .calc__container-header .calc__header-themeContainer .calc__header-btns .toggleBtn {
   all: unset;
-  background-color: black;
   height: 17px;
   width: 17px;
   border-radius: 50%;
@@ -77,7 +91,6 @@ body .calc .calc__container .calc__display {
   width: 100%;
   height: 90px;
   margin: 2rem 0;
-  background-color: wheat;
   border-radius: 15px;
 }
 body .calc .calc__container .calc__numberContainer {
@@ -134,8 +147,4 @@ body .calc .calc__container .calc__numberContainer .row-5 .resetBtn:hover, body 
     height: 60px !important;
     border-radius: 10px;
   }
-}
-
-.calc {
-  background-color: hsl(225deg, 21%, 49%);
 }/*# sourceMappingURL=main.css.map */
