--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,8 +8,28 @@
   box-sizing: border-box;
 }
 
-@mixin setBg($background) {
-  background-color: $background;
+@mixin setBg($bgColor){
+  // background-color: $bgColor;
+  .calc{
+    background-color:$bgColor;
+  }
+  .calc__container-logo,.labels,.calc__theme{
+    color: var.$White;
+  }
+  .calc__header-btns{
+    background-color: var.$Verydarkdesaturatedblue2 !important;
+  }
+  .toggleBtn{
+    background-color: var.$Red !important;
+  }
+  .calc__display{
+    background-color: var.$Verydarkdesaturatedblue3;
+  }
+  
+}
+.theme1{
+  @include setBg(var.$Desaturateddarkblue1);
+  // @include setBg(var.$Desaturateddarkblue2);
 }
 
 body{
@@ -49,7 +69,7 @@ body{
             align-items: center;
             // align-items: baseline;
             flex-direction: row;
-            background-color: blue;
+            // background-color: blue;
             border-radius:30px;
             position: relative;
             height: 15px;
@@ -74,7 +94,6 @@ body{
 
             .toggleBtn{
               all:unset;
-              background-color: black;
               height:17px;
               width:17px;
               border-radius: 50%;
@@ -90,7 +109,7 @@ body{
         width: 100%;
         height: 90px;
         margin: 2rem 0;
-        background-color: wheat;
+        // background-color: wheat;
         // display: flex;
         // justify-content: end;
         // align-items: center;
@@ -163,7 +182,8 @@ body{
 }
 
 //js files
-
-.calc{
-    @include setBg(var.$Desaturateddarkblue1);
-}
+// @mixin setBbg($bgColor){
+//   .calc{
+//     background-color: red;
+//   }
+// }
