--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,10 +16,10 @@
     color: $headerTextColor;
   }
   .calc__header-btns{
-    background-color:$toggleBg !important;
+    background-color:$mainBg !important;
   }
   .toggleBtn{
-    background-color: var.$Red !important;
+    background-color: $toggleBg !important;
   }
   .calc__display{
     background-color: $screenBg;
@@ -37,7 +37,7 @@
   }
   .equalesBtn{
     background-color:$eqlsBg !important;
-    box-shadow: 0 4px 0 0.2px $delShadow !important;
+    box-shadow: 0 4px 0 0.2px $eqlsShadow !important;
   }
   
 }
@@ -55,18 +55,32 @@
 //   var.$Darkred
 //   )
 // }
-.theme2{
-  @include setColors(var.$Lightgray ,
-  var.$Verydarkgrayishyellow,
-  var.$Grayishred,
-  var.$Verylightgray,
-  var.$Grayishred,
-  var.$Lightgrayishyellow,
-  var.$Darkgrayishorange,
-  var.$Darkmoderatecyan,
-  var.$Verydarkcyan,
-  var.$Orange ,
-  var.$Darkorange
+// .theme2{
+//   @include setColors(var.$Lightgray,
+//   var.$Verydarkgrayishyellow,
+//   var.$Grayishred,
+//   var.$Verylightgray,
+//   var.$Grayishred,
+//   var.$Lightgrayishyellow,
+//   var.$Darkgrayishorange,
+//   var.$Darkmoderatecyan,
+//   var.$Verydarkcyan,
+//   var.$Orange ,
+//   var.$Darkorange
+//   )
+// }
+.theme3{
+  @include setColors(var.$Verydarkviolet1,
+  var.$Lightyellow ,
+  var.$Purecyan ,
+  var.$Verydarkviolet2 ,
+  var.$Verydarkviolet2 ,
+  var.$Veryarkviolet ,
+  var.$Darkmagenta ,
+  var.$Darkviolet,
+  var.$Vividmagenta,
+  var.$Purecyan,
+  var.$Softcyan
   )
 }
 
